[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sdx-pce"
version = "3.1.0.dev4"
description = "Heuristic and Optimal Algorithms for CSP and TE Computation"
authors = [
    { name = "Yufeng Xin", email = "yxin@renci.org" },
    { name = "Yifei Wang", email = "ywang13@renci.org" },
    { name = "Cong Wang", email = "cwang@renci.org" },
    { name = "Italo Valcy", email = "italo@ampath.net" },
    { name = "Sajith Sasidharan", email = "sajith@hcoop.net" },
]
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "matplotlib",  #  for pylab
    "networkx",
    "numpy",
    "ortools",
    "prtpy",
    "pydot",
    "dataclasses-json",
    "sdx-datamodel @ git+https://github.com/atlanticwave-sdx/datamodel@3.0.0.dev11",
]

[project.urls]
Home = "https://github.com/atlanticwave-sdx/pce"
Issues = "https://github.com/atlanticwave-sdx/pce/issues"

[project.optional-dependencies]
test = [
    "pytest >= 7.1.2",
    "coverage == 7.6.1",   # See https://github.com/nedbat/coveragepy/issues/1896
    "pytest-cov >= 3.0.0",
    "pytest-sugar >= 1.0.0",
]
pygraphviz = [
    "pygraphviz"
]
lint = [
    "ruff == 0.0.285",
    "black == 24.*",
    "isort == 5.*",
]

[options.packages.find]
where = "src"

[tool.pytest.ini_options]
addopts = "--cov=sdx_pce --cov-report html --cov-report term-missing"
testpaths = [
    "tests"
]
filterwarnings = [
    # Ignore this warning from grenml: grenml/models/topologies.py:55:
    # DeprecationWarning: Type has been deprecated in version 0.1.5
    # and will be removed in the next major version. Use the argument
    # "tag" to avoid this warning.
    "ignore:Type has been deprecated in version 0.1.5 and will be removed:DeprecationWarning",
]

[tool.isort]
profile = "black"
src_paths = ["src", "tests", "scripts"]

[tool.coverage.run]
branch = true
# source_pkgs = sdx.pce
omit = ["tests/*", "src/*"]
relative_files = true

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "self._logger",
    "raise",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    ]

# The section below will let us have relative paths in test coverage
# report. See https://hynek.me/articles/testing-packaging/
[tool.coverage.paths]
source = [
    # In checkouts.
    "src/",
    # In installed paths.
    "**/site-packages/",
    # In tox environments.
    ".tox/**/site-packages/",
]

[tool.ruff]
ignore = [
    "E501"  # Ignore 'line too long' errors since we auto-format
            # using black.
]
