# See https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[tool:pytest]
addopts = --cov=sdx --cov-report=html --cov-report=term-missing

[metadata]
name = pce
version = 0.0.1
author = Yufeng Xin, Yifei Wang
author_email = yxin@renci.org
description = Heuristic and Optimal Algorithms for CSP and TE Computation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/atlanticwave-sdx/pce
project_urls =
    Bug Tracker = https://github.com/atlanticwave-sdx/pce/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

package_dir={
    '': 'src'},

setup_requires=(
    'pytest-runner',),
tests_require=(
    'pytest-cov',),

[options]
packages = find:
include_package_data = True
package_dir =
    = src

[options.packages.find]
where = src
exclude =
    htmlcov

