# See https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[tool:pytest]
addopts = --cov-config=setup.cfg --cov=sdx.pce --cov-report=html --cov-report=term-missing

[metadata]
name = pce
version = 0.0.1
author = Yufeng Xin, Yifei Wang
author_email = yxin@renci.org
description = Heuristic and Optimal Algorithms for CSP and TE Computation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/atlanticwave-sdx/pce
project_urls =
    Bug Tracker = https://github.com/atlanticwave-sdx/pce/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
package_dir =
    = src
install_requires =
    matplotlib  #  for pylab
    networkx
    numpy
    ortools
    prtpy
    dataclasses-json
    sdxdatamodel @ git+https://github.com/atlanticwave-sdx/datamodel@1.0.0a

[options.packages.find]
where = src
exclude =
    htmlcov

[options.extras_require]
test =
    pytest
    pytest-cov

pygraphviz =
    pygraphviz

[coverage:run]
branch = True
# source_pkgs = sdx.pce
omit = tests/*
relative_files = True

# The section below will let us have relative paths in test coverage
# report. See https://hynek.me/articles/testing-packaging/
[coverage:paths]
source =
    src/
    venv/lib/python*/site-packages/
